Adding GitHub Updater support.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ Author URI: http://rbourassa.ca
 Template: tourog
 Version: 1.1
 Text Domain:  tourog-child
+Gitea Theme URI: https://gitea.alphaomega-server.cloud/rbourassa44/tourog-child
 */
 
 /* ----------------------------------
