Changed the theme URI

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: tourog Child Theme
-Theme URI: http://rbourassa.ca
+Theme URI: https://gitea.alphaomega-server.cloud/rbourassa44/tourog-child
 Description: 
 Author: rbourassa
 Author URI: http://rbourassa.ca
