Moved from Gitea to Github.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: tourog Child Theme
-Theme URI: https://gitea.alphaomega-server.cloud/rbourassa44/tourog-child
+Theme URI: https://github.com/rbourassa4/tourog-child
 Description: 
 Author: rbourassa
 Author URI: http://rbourassa.ca
 Template: tourog
 Version: 1.1.1
 Text Domain:  tourog-child
-Gitea Theme URI: https://gitea.alphaomega-server.cloud/rbourassa44/tourog-child
+GitHub Theme URI: https://github.com/rbourassa4/tourog-child
 */
 
 /* ----------------------------------
