--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description:
 Author: rbourassa
 Author URI: http://rbourassa.ca
 Template: tourog
-Version: 1.2
+Version: 1.2.1
 Text Domain:  tourog-child
 GitHub Theme URI: https://github.com/rbourassaca/tourog-child
 */
@@ -1293,15 +1293,21 @@ section.blog {
 }
 
 .customGallery a{
-  display: block;
+  
   border-bottom: 0px !important;
   text-align: center;
   overflow: hidden;
-  max-height: 250px;
+  height: 300px;
+}
+
+.customGallery div{
+  margin-bottom: 30px;
 }
 
 .customGallery a img{
+  object-fit: cover;
   width: 100%;
+  height: 300px;
 }
 
 .embed-container {
