--- a/style.css
+++ b/style.css
@@ -230,3 +230,11 @@ body footer.footer div.wpcf7 label {
 body footer.footer div.wpcf7 textarea {
   resize: none;
 }
+
+@media (min-width: 2500px) {
+  .container {
+    max-width: 2000px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
+}
