Correction d'un bug d'affichage d'une ligne blanche avant le footer.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ Version: 2.0.1
 Text Domain:  tourog-child
 */
 body {
+  background-color: #222327;
   cursor: none;
   overflow-x: hidden !important;
 }
